Introduce hybrid mode as a plugin (#1019)
Refactor core to support pluggable page rendering and resolution.
Add roq-plugin/hybrid for runtime caching, future pages, and cache
management API.

Supersedes #759 (original work by @mcruzdev).