@@ -1,15 +1,8 @@
 package io.quarkiverse.roq.frontmatter.runtime;
 
-import static io.quarkiverse.tools.stringpaths.StringPaths.addTrailingSlashIfNoExt;
-import static io.quarkiverse.tools.stringpaths.StringPaths.removeLeadingSlash;
-
-import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.function.Supplier;
+import java.util.concurrent.CompletionStage;
 
 import jakarta.enterprise.event.Event;
 
@@ -20,7 +13,6 @@ import io.quarkiverse.roq.frontmatter.runtime.config.RoqSiteConfig;
 import io.quarkiverse.roq.frontmatter.runtime.devmode.RoqErrorPage;
 import io.quarkiverse.roq.frontmatter.runtime.model.Page;
 import io.quarkiverse.roq.frontmatter.runtime.model.Site;
-import io.quarkiverse.roq.frontmatter.runtime.utils.Sites;
 import io.quarkus.arc.Arc;
 import io.quarkus.arc.ArcContainer;
 import io.quarkus.arc.InjectableContext.ContextState;
@@ -30,11 +22,9 @@ import io.quarkus.qute.Template;
 import io.quarkus.qute.TemplateInstance;
 import io.quarkus.qute.runtime.TemplateProducer;
 import io.quarkus.runtime.LaunchMode;
-import io.quarkus.runtime.LocalesBuildTimeConfig;
 import io.quarkus.security.identity.CurrentIdentityAssociation;
 import io.quarkus.security.identity.SecurityIdentity;
 import io.quarkus.vertx.http.runtime.CurrentVertxRequest;
-import io.quarkus.vertx.http.runtime.RoutingUtils;
 import io.quarkus.vertx.http.runtime.VertxHttpBuildTimeConfig;
 import io.quarkus.vertx.http.runtime.security.QuarkusHttpUser;
 import io.vertx.core.Handler;
@@ -48,38 +38,26 @@ public class RoqRouteHandler implements Handler<RoutingContext> {
 
     private final List<String> compressMediaTypes;
     private final RoqSiteConfig config;
-    private final LocalesBuildTimeConfig locales;
-    // request path to template path
-    private final Map<String, Supplier<? extends Page>> pages;
-    private final Map<String, Page> extractedPaths;
 
     private final Event<SecurityIdentity> securityIdentityEvent;
     private final CurrentIdentityAssociation currentIdentity;
     private final CurrentVertxRequest currentVertxRequest;
     private final ManagedContext requestContext;
     private final LazyValue<TemplateProducer> templateProducer;
-    private final LazyValue<Site> site;
 
-    public RoqRouteHandler(String rootPath, VertxHttpBuildTimeConfig httpBuildTimeConfig,
-            Map<String, Supplier<? extends Page>> pages,
-            RoqSiteConfig config,
-            LocalesBuildTimeConfig locales) {
-        this.pages = pages;
+    public RoqRouteHandler(VertxHttpBuildTimeConfig httpBuildTimeConfig,
+            RoqSiteConfig config) {
         this.compressMediaTypes = httpBuildTimeConfig.enableCompression()
                 ? httpBuildTimeConfig.compressMediaTypes().orElse(List.of())
                 : null;
         this.config = config;
-        this.locales = locales;
-        this.extractedPaths = new ConcurrentHashMap<>();
         ArcContainer container = Arc.container();
         this.securityIdentityEvent = container.beanManager().getEvent().select(SecurityIdentity.class);
         this.currentVertxRequest = container.instance(CurrentVertxRequest.class).get();
         this.requestContext = container.requestContext();
         this.currentIdentity = container.instance(CurrentIdentityAssociation.class).get();
-        // TemplateProducer is singleton and we want to initialize lazily
         this.templateProducer = new LazyValue<>(
                 () -> Arc.container().instance(TemplateProducer.class).get());
-        this.site = new LazyValue<>(Sites::getSite);
     }
 
     @Override
@@ -120,42 +98,47 @@ public class RoqRouteHandler implements Handler<RoutingContext> {
         }
     }
 
-    private void handlePage(RoutingContext rc) {
-        String requestPath = RoutingUtils.resolvePath(rc);
-        LOG.debugf("Handle page: %s", requestPath);
+    public static void sendPage(RoutingContext rc, String content, Page page, List<String> compressMediaTypes) {
+        String contentType = MimeMapping.getMimeTypeForExtension(page.source().template().targetExtension());
+        if (contentType != null) {
+            if (contentType.startsWith("text")) {
+                rc.response().putHeader(HttpHeaders.CONTENT_TYPE, contentType + ";charset=" + StandardCharsets.UTF_8);
+            } else {
+                rc.response().putHeader(HttpHeaders.CONTENT_TYPE, contentType);
+            }
+        }
+        if (contentType != null && compressMediaTypes != null && compressMediaTypes.contains(contentType)) {
+            String contentEncoding = rc.response().headers().get(HttpHeaders.CONTENT_ENCODING);
+            if (contentEncoding != null && HttpHeaders.IDENTITY.toString().equals(contentEncoding)) {
+                rc.response().headers().remove(HttpHeaders.CONTENT_ENCODING);
+            }
+        }
+        rc.response().setStatusCode(200).end(content);
+    }
 
-        // Extract the real template path, e.g. /item.html -> web/item
-        Page page = extractedPaths.computeIfAbsent(requestPath, this::extractTemplatePath);
+    public static CompletionStage<String> renderPage(Page page, Template template, String locale) {
+        Site site = Arc.container().beanInstanceSupplier(Site.class).get().get();
+        TemplateInstance instance = template.instance();
+        instance.data("page", page);
+        instance.data("site", site);
+        instance.setAttribute(RoqTemplateAttributes.SITE_URL, site.url().absolute());
+        instance.setAttribute(RoqTemplateAttributes.SITE_PATH, site.url().relative());
+        instance.setAttribute(RoqTemplateAttributes.PAGE_URL, page.url().absolute());
+        instance.setAttribute(RoqTemplateAttributes.PAGE_PATH, page.url().relative());
+        if (locale != null && !locale.isBlank()) {
+            instance.setAttribute(TemplateInstance.LOCALE, locale);
+        }
+        return instance.renderAsync();
+    }
+
+    private void handlePage(RoutingContext rc) {
+        Page page = rc.get(RoqPageResolverHandler.ROQ_PAGE_KEY);
         if (page != null) {
             final String templateId = page.source().template().generatedQuteTemplateId();
             Template template = templateProducer.get().getInjectableTemplate(templateId);
-            TemplateInstance instance = template.instance();
-            String contentType = template.getVariant().isPresent() ? template.getVariant().get().getContentType()
-                    : MimeMapping.getMimeTypeForFilename(templateId);
-            Charset charset = template.getVariant().isPresent() ? template.getVariant().get().getCharset()
-                    : StandardCharsets.UTF_8;
-            if (contentType != null) {
-                if (contentType.startsWith("text")) {
-                    rc.response().putHeader(HttpHeaders.CONTENT_TYPE,
-                            contentType + ";charset="
-                                    + charset);
-                } else {
-                    rc.response().putHeader(HttpHeaders.CONTENT_TYPE, contentType);
-                }
-            }
 
-            // Compression support - only compress the response if the content type matches the config value
-            if (contentType != null && compressMediaTypes != null
-                    && compressMediaTypes.contains(contentType)) {
-                String contentEncoding = rc.response().headers().get(HttpHeaders.CONTENT_ENCODING);
-                if (contentEncoding != null && HttpHeaders.IDENTITY.toString().equals(contentEncoding)) {
-                    rc.response().headers().remove(HttpHeaders.CONTENT_ENCODING);
-                }
-            }
-
-            RoqTemplateAttributes.setPageData(instance, page, site.get());
-            instance.setAttribute(TemplateInstance.LOCALE, getLocale(page, rc));
-            instance.renderAsync().whenComplete((r, t) -> {
+            String locale = getLocale(page, rc, config);
+            renderPage(page, template, locale).whenComplete((r, t) -> {
                 if (t != null) {
                     Throwable rootCause = rootCause(t);
                     LOG.errorf("Error occurred while rendering the template [%s]: %s", page.id(), rootCause.toString());
@@ -172,7 +155,7 @@ public class RoqRouteHandler implements Handler<RoutingContext> {
                         rc.fail(rootCause);
                     }
                 } else {
-                    rc.response().setStatusCode(200).end(r);
+                    sendPage(rc, r, page, compressMediaTypes);
                 }
             });
         } else {
@@ -189,29 +172,18 @@ public class RoqRouteHandler implements Handler<RoutingContext> {
         return root;
     }
 
-    private Page extractTemplatePath(String path) {
-        path = removeLeadingSlash(path);
-
-        // Check if we have a matching linked template
-        final String link = addTrailingSlashIfNoExt(path);
-        if (pages.containsKey(link)) {
-            return pages.get(link).get();
-        }
-        return null;
-    }
-
-    private String getLocale(Page page, RoutingContext rc) {
+    public static String getLocale(Page page, RoutingContext rc, RoqSiteConfig config) {
         Object pageLocale = page.data("locale");
         if (pageLocale != null) {
             return pageLocale.toString();
         }
-        if (!rc.acceptableLanguages().isEmpty()) {
-            return rc.acceptableLanguages().get(0).tag();
+        if (rc != null && !rc.acceptableLanguages().isEmpty()) {
+            return rc.acceptableLanguages().getFirst().tag();
         }
         if (config.defaultLocale() != null) {
             return config.defaultLocale();
         }
-        return locales.defaultLocale().map(Locale::getDisplayLanguage).orElse(null);
+        return null;
     }
 
 }
